--- a/starter/package.json
+++ b/starter/package.json
@@ -9,6 +9,7 @@
   "license": "MIT",
   "dependencies": {
     "fastify": "^3.21.5",
+    "fastify-cors": "^6.0.2",
     "pino-pretty": "^4.8.0"
   },
   "devDependencies": {
